src/pages/ResumePage/ResumePage.scss
@use "../../assets/scss/colors";

.resume-page {
  color: colors.$black;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 2rem;

  .title-section {
    text-align: center;
  }

  .actions {
    display: flex;
    gap: 0.5rem;
    justify-content: center;
    border: 1px solid colors.$black-25;
    border-radius: 1rem;
    padding: 0.8rem 1rem;
  }

  & > .resume-section {
    box-shadow: 0 0px 24px rgba(colors.$black, 0.2);
  }
}

@media screen {
  .resume {
    max-width: 950px;
    min-height: 1343px;
  }
}

@media (max-width: 500px) {
  .resume-page .actions {
    width: 100%;
    flex-direction: column;
    gap: 0.8rem;
  }
}

@media print {
  header,
  footer,
  .main-content .title-section,
  .main-content .actions {
    display: none;
  }

  main .main-content {
    padding: 0;
  }

  .resume-page > .resume-section {
    print-color-adjust: exact;
    -webkit-print-color-adjust: exact;
    box-shadow: none;
  }

  .resume {
    width: 100vw;
    height: 100vh;
  }
}

